# Echovault

./: .gitattributes  .gitignore  CHANGELOG.md  CLI.md  Echovault.spec  EchovaultWorker.spec  LICENSE  MusicSync.spec  README.md  build.ps1  main.py  main_new.py  mcp_server.py  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements-local.txt  requirements-mcp.txt  requirements-translation.txt  requirements.txt  test_dl.py  test_rename.py  方案.md
core/: __init__.py  ai_assistant.py  ai_control.py  artifact_diff.py  audio_editor.py  audio_enhancement.py  audio_utils.py  audio_waveform.py  config.py  cover_art.py  environment.py  lrc_parser.py  lrc_writer.py  lyrics_translation.py  mcp_bridge.py  metadata.py  model_download.py  online_lyrics.py  process_utils.py  recognition_progress.py  resource_monitor.py  runtime_detection.py  runtime_manager.py  runtime_protocol.py  runtime_release.py  runtime_setup.py  separation_process.py  separation_runtime.py  sync_engine.py  transfer_session.py  video_aggregation.py  video_library.py  vocal_separation.py  voice_cache.py  whisper_loader.py
docs/: AI助手使用手册.md  AI接口与本地模型接入指南.md  MCP接口使用指南.md  人声与伴奏分离使用指南.md  在线歌词匹配与AI校准指南.md  手机双向传输使用指南.md  歌词翻译使用指南.md  统一工作区界面指南.md  音频编辑使用指南.md
server/: __init__.py  discovery.py  http_server.py  localsend_receiver.py  localsend_sender.py
services/: __init__.py  library_service.py
tests/: __init__.py  conftest.py  qt_test_app.py  test_ai_assistant.py  test_ai_chat_panel.py  test_ai_control.py  test_audio_device_combo.py  test_audio_editor.py  test_audio_enhancement.py  (+58 more)
(+46 files in other folders)
